--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -81,7 +80,9 @@ jQuery(document).ready(function($) {
 <button class="button" onclick='window.location="https://mz123.rth1.me/l/index.html"'>罗盘时钟</button><br></br>
 <button class="button" onclick='window.location="http://xn.freeee.ml/"'>新年倒计时</button><br></br>
 <button class="button" onclick='window.location="http://huaban.freeee.ml/"'>画板</button><br></br>
-<button class="button" onclick='window.location="http://mz-sz.rth1.me"'>时钟</button><br></br>
+<button class="button" onclick='window.location="http://mz-sz.rth1.me"'>时钟1</button><br></br>
+<button class="button" onclick='window.location="clock.html"'>时钟2</button><br></br>
+<button class="button" onclick='window.location="music.html"'>指尖音乐</button><br></br>
 <button class="button" onclick='window.location="http://dzsr.iblogger.org/"'>电子诗人</button><br></br>
 </body>
 </html>
