--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ jQuery(document).ready(function($) {
 <button class="button" onclick='window.location="http://huaban.freeee.ml/"'>画板</button><br></br>
 <button class="button" onclick='window.location="http://mz-sz.rth1.me"'>时钟1</button><br></br>
 <button class="button" onclick='window.location="clock.html"'>时钟2</button><br></br>
-<button class="button" onclick='window.location="music.html"'>指尖音乐</button><br></br>
+<button class="button" onclick='window.location="music/index.html"'>指尖音乐</button><br></br>
 <button class="button" onclick='window.location="http://dzsr.iblogger.org/"'>电子诗人</button><br></br>
 </body>
 </html>
